Fixes rubberband/padding issue on mobile.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -211,6 +211,8 @@ footer img {
 
   .motto {
     width: 100%;
+    padding-right: 0;
+    padding-left: 0;
     text-align: center;
     position: static;
   }
@@ -238,7 +240,7 @@ footer img {
   }
 
   .detail .title {
-    width: 100%;
+    width: calc(100% - 3rem);
     padding: 0.5rem 1.5rem;
   }
 
